force-app/main/default/objects/Conduct__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year_Copy__c</fullName>
        <label>Academic Year Copy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <formula>IF(AND(MONTH(DATEVALUE(CreatedDate))&gt;7,MONTH(DATEVALUE(CreatedDate))&lt;13),TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;/&quot;&amp; TEXT(CreatedDate_plus_1__c ),TEXT(CreatedDate_minus_1__c)&amp;&quot;/&quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Campus__c</fullName>
        <formula>CASE(Student_Name__r.Admissions_File__r.Class__c,
&quot;Pending&quot;,&quot;Campus 1&quot;, 
&quot;A&quot;,&quot;Campus 1&quot;,
&quot;B&quot;,&quot;Campus 1&quot;,
&quot;C&quot;,&quot;Campus 1&quot;,
&quot;D&quot;,&quot;Campus 1&quot;,
&quot;E&quot;,&quot;Campus 1&quot;,
&quot;F&quot;,&quot;Campus 1&quot;,
&quot;G&quot;,&quot;Campus 1&quot;,
&quot;H&quot;,&quot;Campus 1&quot;,
&quot;Pending (Campus 1: A-H)&quot;,&quot;Campus 1&quot;,
&quot;I&quot;,&quot;Campus 2&quot;,
&quot;J&quot;,&quot;Campus 2&quot;,
&quot;K&quot;,&quot;Campus 2&quot;,
&quot;L&quot;,&quot;Campus 2&quot;,
&quot;M&quot;,&quot;Campus 2&quot;,
&quot;N&quot;,&quot;Campus 2&quot;,
&quot;O&quot;,&quot;Campus 2&quot;,
&quot;P&quot;,&quot;Campus 2&quot;,
&quot;Pending (Campus 2: I-P)&quot;,&quot;Campus 2&quot;,
&quot;Q&quot;,&quot;Campus 3&quot;,
&quot;R&quot;,&quot;Campus 3&quot;,
&quot;S&quot;,&quot;Campus 3&quot;,
&quot;T&quot;,&quot;Campus 3&quot;,
&quot;U&quot;,&quot;Campus 3&quot;,
&quot;V&quot;,&quot;Campus 3&quot;,
&quot;W&quot;,&quot;Campus 3&quot;,
&quot;X&quot;,&quot;Campus 3&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_minus_1__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate ))-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate_plus_1__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate ))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Date__c</fullName>
        <description>The date as it is to be displayed in the parent portal</description>
        <formula>IF($User.Is_US_Locale__c = TRUE,

Display_Month__c&amp;&quot; &quot;&amp; TEXT(DAY(Pastoral_Date__c)) &amp;&quot;, &quot;&amp;TEXT(YEAR(Pastoral_Date__c)),

TEXT(DAY(Pastoral_Date__c))&amp;&quot; &quot;&amp;Display_Month__c&amp;&quot; &quot;&amp;TEXT(YEAR(Pastoral_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Header__c</fullName>
        <description>header text to be displayed on portal</description>
        <formula>IF(AND(RecordType.Name = &quot;Incidents&quot;, Health_Related__c = TRUE), &quot;Incident - Health Related&quot;, CASE(RecordType.Name, &quot;Incidents&quot;, &quot;Incident&quot;, &quot;Achievements&quot;, &quot;Achievement&quot;, RecordType.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Month__c</fullName>
        <formula>CASE(MONTH(Pastoral_Date__c), 

1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Title__c</fullName>
        <description>title text to be displayed on portal</description>
        <formula>Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>title text to be displayed on portal</inlineHelpText>
        <label>Display Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_in_Portal__c</fullName>
        <description>Controls whether or not a pastoral record is visible in the parent portal</description>
        <formula>IF(OR(RecordType.Name = &quot;Achievements&quot;, RecordType.Name = &quot;Incidents&quot;, AND(RecordType.Name = &quot;Effort &amp; Attitude&quot;, TEXT(House_Points__c) &lt;&gt; &quot;&quot;, TEXT(Effort__c) = &quot;&quot;)), TRUE,  Is_Approved__c)</formula>
        <label>Visible in Parent Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Improvement Needed</fullName>
                </value>
                <value>
                    <fullName>Cause for Concern</fullName>
                </value>
                <value>
                    <fullName>------------</fullName>
                </value>
                <value>
                    <fullName>Above Expected Level</fullName>
                </value>
                <value>
                    <fullName>Meeting Expectations</fullName>
                </value>
                <value>
                    <fullName>Below Expected Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Folder_Description__c</fullName>
        <label>Folder Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Folder_Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effort &amp; Attitude</fullName>
                </value>
                <value>
                    <fullName>Achievements</fullName>
                </value>
                <value>
                    <fullName>Incidents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>Conduct__c</referenceTo>
        <relationshipLabel>Pastorals</relationshipLabel>
        <relationshipName>Pastorals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Points__c</fullName>
        <inlineHelpText>Please enter a number between 1 and 999 to represent the number of house points, merits etc. that are being awarded</inlineHelpText>
        <label>Point Value (Optional)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>House__c</fullName>
        <formula>Student_Name__r.House__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Approved_Pastorals_in_Folder__c</fullName>
        <description>Populated via apex, defines the number of approved pastorals within a pastoral folder</description>
        <label>Number of Approved Pastorals in Folder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pastorals_in_Folder__c</fullName>
        <description>Populated via apex, defines the number of pastorals within a pastoral folder</description>
        <label>Number of Pastorals in Folder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <description>auto populated by workflow</description>
        <label>Owner Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Portal_Visibility__c</fullName>
        <formula>IF(OR(AND(OR(TEXT(Folder_Type__c) = &quot;Incidents&quot;, TEXT(Folder_Type__c) = &quot;Achievements&quot;), Number_of_Pastorals_in_Folder__c &lt;&gt; 0), AND(TEXT(Folder_Type__c) = &quot;Effort &amp; Attitude&quot;, Number_of_Pastorals_in_Folder__c = Number_of_Approved_Pastorals_in_Folder__c, Number_of_Pastorals_in_Folder__c &lt;&gt; 0, Number_of_Approved_Pastorals_in_Folder__c &lt;&gt; 0)), &quot;Visible in Portal&quot;, 

IF(AND(TEXT(Folder_Type__c) = &quot;Effort &amp; Attitude&quot;, Number_of_Pastorals_in_Folder__c &lt;&gt; Number_of_Approved_Pastorals_in_Folder__c, Number_of_Pastorals_in_Folder__c &lt;&gt; 0, Number_of_Approved_Pastorals_in_Folder__c &lt;&gt; 0), &quot;Visible to Some Parents&quot;, 

IF(Number_of_Pastorals_in_Folder__c = 0, &quot;Nothing to Display&quot;, 

&quot;Not Visible in Portal&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Portal Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pastoral_Date__c</fullName>
        <label>Pastoral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Private_Comment__c</fullName>
        <label>Internal Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Student_Group__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_to_Notify__c</fullName>
        <description>Populates, via a worklow rule/field update, with the email address of the form tutor of the child for which a pastoral record is being created</description>
        <label>Staff Member to Notify</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Start_Date_Last_Week__c</fullName>
        <description>Calculates the date of the first day (Monday) of the previous week</description>
        <formula>CASE(MOD(TODAY() - DATE(2014, 9, 1), 7), 
0, TODAY()-7, 
1, TODAY()-8,
2, TODAY()-9,
3, TODAY()-10,
4, TODAY()-11,
5, TODAY()-12,
TODAY()-13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Group__c</fullName>
        <label>Student Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Pastorals</relationshipLabel>
        <relationshipName>Pastoral</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Student Academic File</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pastorals</relationshipLabel>
        <relationshipName>Behaviour</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Dashboard_Filter__c</fullName>
        <formula>IF(AND(Pastoral_Date__c &gt;= Student_Group__r.Start_Date_Last_Week__c + 7, 
       Pastoral_Date__c &lt;= Student_Group__r.Start_Date_Last_Week__c + 13
       ),
   &quot;This Calendar Week (Mon-Sun) &quot;, &quot;&quot;) &amp;

IF(MONTH(Pastoral_Date__c) = MONTH(TODAY()), &quot;This Calendar Month (1st - Last) &quot;, &quot;&quot;) &amp;

IF(
   AND(Pastoral_Date__c &gt;= Student_Group__r.Start_Date_Last_Week__c, 
       Pastoral_Date__c &lt;= Student_Group__r.Start_Date_Last_Week__c + 6
       ),
   &quot;Last Calendar Week (Mon-Sun) &quot;, &quot;&quot;) &amp;

IF(
   AND(Pastoral_Date__c &gt;= Student_Group__r.Start_Date_Last_Week__c - 7, 
       Pastoral_Date__c &lt;= Student_Group__r.Start_Date_Last_Week__c - 1
       ),
   &quot;Last 2 Calendar Weeks (Mon-Sun) &quot;, &quot;&quot;) &amp;

IF(
   AND(Pastoral_Date__c &gt;= Student_Group__r.Start_Date_Last_Week__c - 21, 
       Pastoral_Date__c &lt;= Student_Group__r.Start_Date_Last_Week__c - 8
       ),
   &quot;Last 4 Calendar Weeks (Mon-Sun) &quot;, &quot;&quot;) &amp;

IF(MONTH(Pastoral_Date__c) = MONTH(TODAY())-1, &quot;Last Calendar Month (1st - Last) &quot;, &quot;&quot;) &amp;

Academic_Year__c &amp; &quot; &quot; &amp; Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Dashboard Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>IF(AND(MONTH(Pastoral_Date__c)&gt;7,MONTH(Pastoral_Date__c)&lt;13),&quot;Term 1&quot;,IF(AND(MONTH(Pastoral_Date__c)&gt;=1,(OR(MONTH(Pastoral_Date__c)&lt;4,(AND(MONTH(Pastoral_Date__c)=4,DAY(Pastoral_Date__c)&lt;11))))),&quot;Term 2&quot;,&quot;Term 3&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Pastoral</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pastoral</pluralLabel>
    <recordTypes>
        <fullName>Awards</fullName>
        <active>true</active>
        <label>Achievements</label>
    </recordTypes>
    <recordTypes>
        <fullName>House_Points</fullName>
        <active>true</active>
        <label>Effort &amp; Attitude</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leadership_Roles</fullName>
        <active>false</active>
        <label>Leadership Roles</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pastoral</fullName>
        <active>true</active>
        <label>Incidents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pastoral_Folder</fullName>
        <active>true</active>
        <label>Pastoral Folder</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pastoral_Effort_Attitude_Validation</fullName>
        <active>true</active>
        <description>Pastorals of type &apos;Effort &amp; Attitude&apos; must have a &apos;House Point Value&apos; greater than zero OR &apos;Effort&apos; grade AND a &apos;Pastoral Date&apos; and &apos;Title&apos;.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &quot;House_Points&quot;,
    OR(
       AND(
           !ISBLANK(TEXT(Effort__c)), 
           !ISBLANK(TEXT(House_Points__c))
           ),
       AND(ISBLANK(TEXT(Effort__c)), 
           OR(ISBLANK(TEXT(House_Points__c)), 
              House_Points__c == 0
              )
           )
       )
    )</errorConditionFormula>
        <errorMessage>Pastorals of type &apos;Effort &amp; Attitude&apos; must have a &apos;House Point Value&apos; OR &apos;Effort&apos; grade (but not both) AND a &apos;Pastoral Date&apos; and &apos;Title&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pastoral_General_Validation</fullName>
        <active>true</active>
        <description>Title and Pastoral Date must be provided, and &apos;Effort&apos; cannot be &quot;------------&quot;</description>
        <errorConditionFormula>AND( 
    RecordType.DeveloperName != &apos;Pastoral_Folder&apos;,
    OR(ISBLANK( Title__c ), 
       ISBLANK( Pastoral_Date__c ), 
       TEXT(Effort__c)=&quot;------------&quot;
       )
    )</errorConditionFormula>
        <errorMessage>Title and Pastoral Date must be provided, and &apos;Effort&apos; cannot be &quot;------------&quot;</errorMessage>
    </validationRules>
</CustomObject>